--- a/docs/examples/vars.yaml
+++ b/docs/examples/vars.yaml
@@ -1,43 +1,43 @@
 ---
-disk: vda
+disk: sda
 helper:
   name: "helper"
-  ipaddr: "192.168.7.77"
-  networkifacename: "eth0"
+  ipaddr: "192.168.1.40"
+  networkifacename: "ens192"
 dns:
-  domain: "example.com"
+  domain: "gvirt.dev"
   clusterid: "ocp4"
   forwarder1: "8.8.8.8"
   forwarder2: "8.8.4.4"
 dhcp:
-  router: "192.168.7.1"
-  bcast: "192.168.7.255"
+  router: "192.168.1.1"
+  bcast: "192.168.1.255"
   netmask: "255.255.255.0"
-  poolstart: "192.168.7.10"
-  poolend: "192.168.7.30"
-  ipid: "192.168.7.0"
+  poolstart: "192.168.1.50"
+  poolend: "192.168.1.254"
+  ipid: "192.168.1.0"
   netmaskid: "255.255.255.0"
 bootstrap:
   name: "bootstrap"
-  ipaddr: "192.168.7.20"
+  ipaddr: "192.168.1.100"
   macaddr: "52:54:00:60:72:67"
 masters:
   - name: "master0"
-    ipaddr: "192.168.7.21"
+    ipaddr: "192.168.1.101"
     macaddr: "52:54:00:e7:9d:67"
   - name: "master1"
-    ipaddr: "192.168.7.22"
+    ipaddr: "192.168.1.102"
     macaddr: "52:54:00:80:16:23"
   - name: "master2"
-    ipaddr: "192.168.7.23"
+    ipaddr: "192.168.1.103"
     macaddr: "52:54:00:d5:1c:39"
 workers:
   - name: "worker0"
-    ipaddr: "192.168.7.11"
+    ipaddr: "192.168.1.104"
     macaddr: "52:54:00:f4:26:a1"
   - name: "worker1"
-    ipaddr: "192.168.7.12"
+    ipaddr: "192.168.1.105"
     macaddr: "52:54:00:82:90:00"
   - name: "worker2"
-    ipaddr: "192.168.7.13"
+    ipaddr: "192.168.1.106"
     macaddr: "52:54:00:8e:10:34"
